<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fancy_bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.yankteam.yank.app.MainActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/yank"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/tagline"
            android:layout_marginBottom="25dp"
            />

        <ProgressBar
            android:id="@+id/login_indicator"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dp"
            style="?android:attr/progressBarStyleLarge"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/etxt_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/ml_edittext"
                android:padding="10dp"
                android:gravity="top"
                android:layout_marginBottom="20dp"

                android:hint="@string/username"
                android:singleLine="true"
                android:inputType="text|textEmailAddress|textNoSuggestions"
                />
            <EditText
                android:id="@+id/etxt_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/ml_edittext"
                android:padding="10dp"
                android:gravity="top"
                android:layout_marginBottom="10dp"

                android:hint="@string/password"
                android:singleLine="true"
                android:password="true"
                android:inputType="textPassword|textNoSuggestions"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        >
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signup"
            android:background="@drawable/btn_success"
            android:textColor="#ffffff"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:background="@drawable/btn_primary"
            android:textColor="#ffffff"
            />
    </LinearLayout>
</LinearLayout>

</RelativeLayout>