<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.yankteam.yank.app.SignupActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light" />

        <EditText
            android:id="@+id/userid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:background="@drawable/ml_edittext"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:singleLine="true"
            android:hint="create your user id" />

        <TextView
            android:text="@string/passwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:background="@drawable/ml_edittext"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password"
            android:singleLine="true"
            android:password="true"
            android:padding="10dp"
            android:inputType="textPassword|textNoSuggestions"/>

        <TextView
            android:text="@string/confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light" />

        <EditText
            android:id="@+id/confirm_pw"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:background="@drawable/ml_edittext"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/confirm"
            android:padding="10dp"
            android:singleLine="true"
            android:password="true"
            android:inputType="textPassword|textNoSuggestions"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        >
        <Button
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@drawable/btn_success"
            android:textColor="#ffffff"
            />
        </LinearLayout>
</RelativeLayout>
